--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         node-version: [ 14.x, 16.x, 18.x ]
-        os: [ windows-latest, ubuntu-latest, macOS-latest ]
+        os: [ ubuntu-latest, macOS-latest ]
 
     # Go
     steps:
@@ -37,11 +37,11 @@ jobs:
         VER=`node --version`; echo "Node ver:   $VER"
         VER=`npm --version`; echo "npm ver:    $VER"
 
-    - name: Build
-      run: npm run build
-
     - name: Install
       run: npm install
+
+    - name: Build
+      run: npm run build
 
     - name: Test
       run: npm test
