--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@architect/eslint-config": "^2.0.1",
     "@aws-sdk/client-lambda": "^3.226.0",
     "@aws-sdk/client-ssm": "^3.224.0",
-    "eslint": "^8.29.0"
+    "eslint": "^8.29.0",
+    "tiny-json-http": "^7.4.2"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
