--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,30 +48,40 @@ jobs:
       env:
         CI: true
 
-  # publish:
-  #   # Setup
-  #   needs: build
-  #   runs-on: ubuntu-latest
+  publish:
+    # Setup
+    needs: build
+    runs-on: ubuntu-latest
 
-  #   # Go
-  #   steps:
-  #     - name: Check out repo
-  #       uses: actions/checkout@v3
+    # Go
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v3
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: lts/*
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: lts/*
 
-  #     - name: Staging deploy
-  #       if: github.ref == 'refs/heads/main'
-  #       run: npm run deploy
-  #       env:
-  #         CI: true
-  #         BEGIN_STAGING: true
+      - name: Install
+        run: npm install
 
-  #     - name: Production deploy
-  #       if: startsWith(github.ref, 'refs/tags/v')
-  #       run: npm run deploy
-  #       env:
-  #         CI: true
+      - name: Build
+        run: npm run build
+
+      - name: Staging deploy
+        if: github.ref == 'refs/heads/main'
+        run: npm run publish
+        env:
+          CI: true
+          LAYER_NAME: begin-telemetry-staging
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+
+      - name: Production deploy
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: npm run publish
+        env:
+          CI: true
+          AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+          AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
