--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "node": ">=12"
   },
   "devDependencies": {
-    "@architect/eslint-config": "^2.0.1",
-    "@aws-sdk/client-lambda": "^3.226.0",
-    "@aws-sdk/client-ssm": "^3.224.0",
+    "@architect/eslint-config": "~2.1.1",
+    "@aws-sdk/client-lambda": "~3.226.0",
+    "@aws-sdk/client-ssm": "~3.224.0",
     "cross-env": "~7.0.3",
-    "eslint": "^8.29.0",
+    "eslint": "~8.31.0",
     "nyc": "~15.1.0",
     "tap-arc": "~0.3.5",
     "tape": "~5.6.1",
-    "tiny-json-http": "^7.4.2"
+    "tiny-json-http": "~7.4.2"
   },
   "eslintConfig": {
     "extends": "@architect/eslint-config"
