--- a/src/arc-telemetry/package.json
+++ b/src/arc-telemetry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "begin-telemetry-extension",
+  "name": "arc-telemetry-extension",
   "dependencies": {
     "tiny-json-http": "^7.4.2"
   }
